--- a/custom_components/formlabs/translations/fr.json
+++ b/custom_components/formlabs/translations/fr.json
@@ -1,1 +1,17 @@
-
+{
+  "config": {
+    "step": {
+      "user": {
+        "title": "Formlabs",
+        "description": "Saisissez vos identifiants Developer API Formlabs",
+        "data": {
+          "client_id": "Client ID",
+          "client_secret": "Client Secret"
+        }
+      }
+    },
+    "error": {
+      "auth": "Échec d’authentification"
+    }
+  }
+}
